first try to fix stretched images in in-app browsers

--- a/static/styles.css
+++ b/static/styles.css
@@ -27,6 +27,7 @@ body {
     text-align: center;
     font-family: 'Courier';
     color: #fff;
+    object-fit: contain;
     /* font-weight: bold; */
 }
 
